--- a/page3.html
+++ b/page3.html
@@ -11,10 +11,10 @@
     
     
     <ul class="navbar">
-        <a href=""><li>description</li></a>
-        <a href=""><li>goals</li></a>
-        <a href=""><li> rules </li></a>
-        <a href=""><li> section</li></a>
+        <a href="./page1.html"><li>description</li></a>
+        <a href="./page2.html"><li>goals</li></a>
+        <a href="./page3.html"><li> rules </li></a>
+        <a href="./index.html"><li> section</li></a>
     </ul>
     <hr>
 
